test/spec_vectors/simd_bitwise/fail/module_13.wat
(module (func (result v128) (v128.bitselect (i32.const 0) (i32.const 0) (i32.const 0))))